--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
 spring.application.name=cassandrabase-demo
+spring.cassandra.keyspace-name=test_keyspace
+spring.cassandra.local-datacenter=my-datacenter-1
